# duckdb-quackscale

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: headscale-e2e.yml  headscale-integration.yml  libtailscale-integration.yml
cmake/: Libtailscale.cmake
cmake/patches/: libtailscale-serve-local.patch
docs/: AUTHENTICATION.md  DEVELOPMENT.md  DUCKLAKE_TAILNET.md  HEADSCALE.md  PLAN.md  QUACK_STREAMING.md  README.md  usage.md
examples/: .env.example  Dockerfile  Dockerfile.tailscale-probe  README.md  docker-compose.yml  headscale_quacktail.sql
examples/ducklake/: README.md  local-demo.sql
examples/headscale/: demo.authkey.example
scripts/: ci_compose_e2e.sh  ci_download_release_duckdb.sh  ci_ensure_quack.sh  ci_headscale_e2e.sh  ci_headscale_preflight.sh  ci_headscale_smoke.sh  ci_quacktail_server_smoke.sh  local_remote_headscale_test.sh
scripts/e2e/: docker-build-quackscale.sh  quacktail-compose-bootstrap.sh  quacktail-entrypoint.sh  quacktail-server-run.sh  quacktail-verify-image.sh  tailscale-probe-run.sh
scripts/lib/: headscale_ci.sh  quacktail_ci.sh  quacktail_ext.sh  run_e2e_server.py
src/: attach_ducklake.cpp  quackscale_extension.cpp  tailscale_bridge.cpp  tailscale_forwarder.cpp
src/include/: quackscale_defaults.hpp  tailscale_bridge.hpp  tailscale_forwarder.hpp
test/e2e/: Dockerfile.quacktail  README.md
test/headscale/: Dockerfile.ci  config-ci.yaml  policy.hujson
test/sql/: quackscale.test
